--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -33,9 +33,15 @@
             </nav>
         </header>
 
+        
         <section class="section-one">
-            <img class="section-one-ceep-img" src="./img/banner.jpg" alt="">
             <img class="section-one-ceep-img-mobile" src="./img/bannermobile.jpg" alt="">
+            <div class="slider">
+                <img class="mySlides" src="./img/banner.jpg" alt="">
+                <img class="mySlides" src="./img/bannercursos.jpg" alt="">
+                <button class="button-left" onclick="plusDivs(-1)">&#10094;</button>
+                <button class="button-right" onclick="plusDivs(+1)">&#10095;</button>
+            </div>
         </section>
 
         <section class="section-two">  
@@ -78,7 +84,14 @@
                     </div>
                 </a>
             </article>
+
+
         </section> 
+
+        <section class="section-three">
+            <img class="section-three-img" src="/img/fotoceep.jpeg" alt="">
+            <img class="section-three-logo" src="/img/logoJFB.png" alt="">
+        </section>
 
         <footer class="footer-main">
             <div class="footer-chield">
