--- a/routes/pages/declaracoes.html
+++ b/routes/pages/declaracoes.html
@@ -35,7 +35,7 @@
         </header>
 
         <div class="header-quemsomos">
-            <img class="header-quemsomos-img" src="../img/logoJFB.png" alt="">
+            <img class="header-quemsomos-img" src="../img/declaracoes.png" alt="">
         </div>
         
 
