--- a/routes/pages/ensinomedio.html
+++ b/routes/pages/ensinomedio.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/responsive.css">   
     </head>
     <body>
+        <h1 style="text-align: center;">Nenhum dado cadastrado!</h1>
         <script src="/js/script.js"></script>
     </body>
 </html>
