--- a/routes/pages/ensinopro.html
+++ b/routes/pages/ensinopro.html
@@ -36,55 +36,69 @@
         </header>
 
         <div class="header-quemsomos">
-            <img class="header-quemsomos-img" src="../img/logoJFB.png" alt="">
+            <img class="header-quemsomos-img" src="../img/nossoscursos.png" alt="">
         </div>
         <div class="ensino-container">
 
         <div class="ensino-chield"> 
             <h2 class="ensino-titulo">TÉCNICO EM AGENTE COMUNITÁRIO DE SÁUDE</h2>
-            <p class="ensino-descricao">Carga horária: 1200h </p>
-            <p class="ensino-descricao">Duração: 24 meses </p>
-            <p class="ensino-descricao">Modalidade:Concomitante/Subsquente </p>
+            <div>
+                <p class="ensino-descricao">Carga horária: 1200h </p>
+                <p class="ensino-descricao">Duração: 24 meses </p>
+                <p class="ensino-descricao">Modalidade:Concomitante/Subsquente </p>
+            </div>
             <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
         </div>
         <br>
-        <div class="ensino-chield"> 
-            <h2 class="ensino-titulo">TÉCNICO EM CONDOMÍNIO</h2>
-            <p class="ensino-descricao">Carga horária: 1200h </p>
-            <p class="ensino-descricao">Duração:17 meses </p>
-            <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+        <div class="ensino-chield">
+            <h2 class="ensino-titulo">TÉCNICO EM CONDOMÍNIO</h2> 
+            <div>
+                <p class="ensino-descricao">Carga horária: 1200h </p>
+                <p class="ensino-descricao">Duração:17 meses </p>
+                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            </div>
             <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
         </div>
         <br>
         <div class="ensino-chield"> 
             <h2 class="ensino-titulo">TÉCNICO EM HOSPEDAGEM</h2>
-            <p class="ensino-descricao">Carga horária: 1200h </p>
-            <p class="ensino-descricao">Duração:24 meses </p>
-            <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            <div>
+                <p class="ensino-descricao">Carga horária: 1200h </p>
+                <p class="ensino-descricao">Duração:24 meses </p>
+                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            </div>
+
             <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
         </div>
         <br>
         <div class="ensino-chield"> 
             <h2 class="ensino-titulo">TÉCNICO EM INFORMÁTICA PARA INTERNET</h2>
-            <p class="ensino-descricao">Carga horária: 800h </p>
-            <p class="ensino-descricao">Duração:17 meses </p>
-            <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            <div>
+                <p class="ensino-descricao">Carga horária: 800h </p>
+                <p class="ensino-descricao">Duração:17 meses </p>
+                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            </div>
             <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
         </div>
         <br>
         <div class="ensino-chield"> 
                 <h2 class="ensino-titulo">TÉCNICO EM REDES DE COMPUTADORES</h2>
-                <p class="ensino-descricao">Carga horária: 800h </p>
-                <p class="ensino-descricao">Duração: 17 meses </p>
-                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                <div>
+                    <p class="ensino-descricao">Carga horária: 800h </p>
+                    <p class="ensino-descricao">Duração: 17 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                </div>
                 <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
         <div class="ensino-chield"> 
                 <h2 class="ensino-titulo">TÉCNICO EM RESTAURANTE E BAR</h2>
-                <p class="ensino-descricao">Carga horária: 800h </p>
-                <p class="ensino-descricao">Duração: 17 meses </p>
-                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                <div>
+                    <p class="ensino-descricao">Carga horária: 800h </p>
+                    <p class="ensino-descricao">Duração: 17 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                </div>
+
                 <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
         </div>
         <br>
