--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -37,8 +37,8 @@
         <section class="section-one">
             <img class="section-one-ceep-img-mobile" src="./img/bannermobile.jpg" alt="">
             <div class="slider">
-                <img class="mySlides" src="./img/banner.jpg" alt="">
-                <img class="mySlides" src="./img/bannercursos.jpg" alt="">
+                <img class="mySlides" src="./img/banneralt.png" alt="Banner Principal">
+                <img class="mySlides" src="./img/banneralt2.png" alt="Banner dos Cursos">
                 <button class="button-left" onclick="plusDivs(-1)">&#10094;</button>
                 <button class="button-right" onclick="plusDivs(+1)">&#10095;</button>
             </div>
