--- a/routes/pages/oficinas.html
+++ b/routes/pages/oficinas.html
@@ -10,6 +10,7 @@
     
 </head>
     <body>
+        <h1 style="text-align: center;">Nenhuma oficina cadastrada!</h1>
         <script src="/js/script.js"></script>
     </body>
 </html>
