--- a/routes/pages/quemsomos.html
+++ b/routes/pages/quemsomos.html
@@ -36,11 +36,11 @@
         </header>
 
         <div class="header-quemsomos">
-            <img class="header-quemsomos-img" src="../img/logoJFB.png" alt="">
+            <img class="header-quemsomos-img" src="../img/quemsomos.png" alt="">
         </div>
         
         <div class="sobre">
-            <h2 class="sobre-title"><b> Quem Somos</b> </h2>
+            <h2 class="sobre-title"><b> Sobre a instituição</b> </h2>
             <br><p>O Centro de Educação Profissional José Figueiredo Barreto (CEEPJFB) é uma escola de Educação Técnico Profissionalizante e Ensino Médio Integral, construída e fundada em junho de 2009, pelo presidente Lula e Marcelo Déda, situada à Rua Laranjeiras, 1919. A instituição foi construída em uma área de quatro mil metros quadrados e é composta por 10 salas de aula, laboratórios de informática, gestão, rede, hardware e de turismo. Possui também instalados refeitório, cozinha, assistência ao aluno, supervisão/coordenação de cursos, reuniões, direção, reprografia, arquivo e multimeios, além da secretaria escolar, biblioteca, auditório, cantina e um belo jardim. A construção estava paralisada desde 2003 e foi retomada em 2007, pelo governador Marcelo Déda.</p><br>
 
             <p>O Centro abriu em seu primeiro concurso 540 vagas para os cursos Técnicos de Redes de Computadores, Serviços de Restaurante e Bar e Serviços de Condomínio. Esta é a primeira escola profissionalizante da Capital sergipana.</p>
