--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -89,8 +89,9 @@
         </section> 
 
         <section class="section-three">
-            <img class="section-three-img" src="/img/fotoceep.jpeg" alt="">
+            <img class="section-three-img" src="/img/fotodoceep.jpg" alt="">
             <img class="section-three-logo" src="/img/logoJFB.png" alt="">
+            <img class="section-three-img" src="/img/fotodoceep2.png" alt="">
         </section>
 
         <footer class="footer-main">
