--- a/routes/pages/declaracoes.html
+++ b/routes/pages/declaracoes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declarações</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/declaracoes.css">
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
     <body>
@@ -34,8 +35,9 @@
             </nav>
         </header>
 
-        <div class="header-quemsomos">
-            <img class="header-quemsomos-img" src="../img/declaracoes.png" alt="">
+        <div class="header-alt">
+            <img class="header-alt-img" src="/img/logoJFB.png" alt="">
+            <h1 class="header-alt-text">Declarações</h1>
         </div>
         
 
