--- a/routes/pages/ensinopro.html
+++ b/routes/pages/ensinopro.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ensino Técnico</title>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/ensinopro.css">
         <link rel="stylesheet" href="/css/responsive.css">        
     </head>
     <body>
@@ -35,53 +36,54 @@
             </nav>
         </header>
 
-        <div class="header-quemsomos">
-            <img class="header-quemsomos-img" src="../img/nossoscursos.png" alt="">
+        <div class="header-alt">
+            <img class="header-alt-img" src="/img/logoJFB.png" alt="">
+            <h1 class="header-alt-text">Nossos Cursos</h1>
         </div>
+
         <div class="ensino-container">
+            <div class="ensino-chield"> 
+                <h2 class="ensino-titulo">TÉCNICO EM AGENTE COMUNITÁRIO DE SÁUDE</h2>
+                <div>
+                    <p class="ensino-descricao">Carga horária: 1200h </p>
+                    <p class="ensino-descricao">Duração: 24 meses </p>
+                    <p class="ensino-descricao">Modalidade:Concomitante/Subsquente </p>
+                </div>
+                <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+            </div>
+            <br>
+            <div class="ensino-chield">
+                <h2 class="ensino-titulo">TÉCNICO EM CONDOMÍNIO</h2> 
+                <div>
+                    <p class="ensino-descricao">Carga horária: 1200h </p>
+                    <p class="ensino-descricao">Duração:17 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                </div>
+                <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+            </div>
+            <br>
+            <div class="ensino-chield"> 
+                <h2 class="ensino-titulo">TÉCNICO EM HOSPEDAGEM</h2>
+                <div>
+                    <p class="ensino-descricao">Carga horária: 1200h </p>
+                    <p class="ensino-descricao">Duração:24 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                </div>
 
-        <div class="ensino-chield"> 
-            <h2 class="ensino-titulo">TÉCNICO EM AGENTE COMUNITÁRIO DE SÁUDE</h2>
-            <div>
-                <p class="ensino-descricao">Carga horária: 1200h </p>
-                <p class="ensino-descricao">Duração: 24 meses </p>
-                <p class="ensino-descricao">Modalidade:Concomitante/Subsquente </p>
+                <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
-            <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-        </div>
-        <br>
-        <div class="ensino-chield">
-            <h2 class="ensino-titulo">TÉCNICO EM CONDOMÍNIO</h2> 
-            <div>
-                <p class="ensino-descricao">Carga horária: 1200h </p>
-                <p class="ensino-descricao">Duração:17 meses </p>
-                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+            <br>
+            <div class="ensino-chield"> 
+                <h2 class="ensino-titulo">TÉCNICO EM INFORMÁTICA PARA INTERNET</h2>
+                <div>
+                    <p class="ensino-descricao">Carga horária: 800h </p>
+                    <p class="ensino-descricao">Duração:17 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
+                </div>
+                <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
-            <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-        </div>
-        <br>
-        <div class="ensino-chield"> 
-            <h2 class="ensino-titulo">TÉCNICO EM HOSPEDAGEM</h2>
-            <div>
-                <p class="ensino-descricao">Carga horária: 1200h </p>
-                <p class="ensino-descricao">Duração:24 meses </p>
-                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
-            </div>
-
-            <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-        </div>
-        <br>
-        <div class="ensino-chield"> 
-            <h2 class="ensino-titulo">TÉCNICO EM INFORMÁTICA PARA INTERNET</h2>
-            <div>
-                <p class="ensino-descricao">Carga horária: 800h </p>
-                <p class="ensino-descricao">Duração:17 meses </p>
-                <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
-            </div>
-            <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-        </div>
-        <br>
-        <div class="ensino-chield"> 
+            <br>
+            <div class="ensino-chield"> 
                 <h2 class="ensino-titulo">TÉCNICO EM REDES DE COMPUTADORES</h2>
                 <div>
                     <p class="ensino-descricao">Carga horária: 800h </p>
@@ -91,7 +93,7 @@
                 <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
-        <div class="ensino-chield"> 
+            <div class="ensino-chield"> 
                 <h2 class="ensino-titulo">TÉCNICO EM RESTAURANTE E BAR</h2>
                 <div>
                     <p class="ensino-descricao">Carga horária: 800h </p>
@@ -100,8 +102,8 @@
                 </div>
 
                 <a class="ensino-button" href="/documents/acsagrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-        </div>
-        <br>
+            </div>
+            <br>
         </div>
 
             <footer class="footer-main">
