--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Página Inicial</title>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/home.css">
         <link rel="stylesheet" href="/css/responsive.css">   
     </head>
     <body>
@@ -15,7 +16,7 @@
             </div>
             
             <nav>
-                <img id="button-mobile" src="../img/botaomenu.png" alt="Imagem do menu para dispositivos móveis">
+                <img id="button-mobile" src="./img/botaomenu.png" alt="Imagem do menu para dispositivos móveis">
                 <ul id="menu">
                     <li><a class="menu-item" href="https://www.seduc.se.gov.br/index.html" target="_blank">PORTAL SEDUC</a></li>
                     <li><a class="menu-item" href="./oficinas">OFICINAS</a></li>
@@ -35,12 +36,15 @@
 
         
         <section class="section-one">
-            <img class="section-one-ceep-img-mobile" src="./img/bannermobile.jpg" alt="">
-            <div class="slider">
-                <img class="mySlides" src="./img/banneralt.png" alt="Banner Principal">
-                <img class="mySlides" src="./img/banneralt2.png" alt="Banner dos Cursos">
-                <button class="button-left" onclick="plusDivs(-1)">&#10094;</button>
-                <button class="button-right" onclick="plusDivs(+1)">&#10095;</button>
+            <div class="section-one-mobile">
+                <img class="section-one-mobile-img" src="/img/logoJFB.png" alt="">
+                <img class="section-one-mobile-img" src="/img/matriculas.png" alt="">
+            </div>
+            <div class="section-one-slider">
+                <img class="section-one-slides" src="./img/banneralt.png" alt="Banner Principal">
+                <img class="section-one-slides" src="./img/banneralt2.png" alt="Banner dos Cursos">
+                <button class="section-one-button-left" onclick="plusDivs(-1)">&#10094;</button>
+                <button class="section-one-button-right" onclick="plusDivs(+1)">&#10095;</button>
             </div>
         </section>
 
