--- a/routes/pages/login.html
+++ b/routes/pages/login.html
@@ -6,25 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal do Aluno</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/portal.css">
     <link rel="stylesheet" href="/css/responsive.css">   
 </head>
-    <body class="body-login">
+    <body class="portal-login">
         <form method="POST" action="/login">
-            <div class="login-container">
-                <div class="login-logo">
-                    <img class="login-img" src="../img/logoJFB.png" alt="">
-                    <h1 class="login-title">Login</h1>
+            <div class="portal-login-container">
+                <div class="portal-login-logo">
+                    <img class="portal-login-img" src="../img/logoJFB.png" alt="">
+                    <h1 class="portal-login-title">Login</h1>
                 </div>
 
-                <label class="login-label" for="">Usuário</label>
-                <input class="input"  type="text" name="login" id="login" autocomplete="off" required/> 
-                <label class="login-label" for="">Senha</label>
-                <input class="input"  type="password" name="senha" id="senha" required/>      
+                <label class="portal-login-label" for="">Usuário</label>
+                <input class="portal-input" type="text" name="login" id="login" autocomplete="off" required/> 
+                <label class="portal-login-label" for="">Senha</label>
+                <input class="portal-input"  type="password" name="senha" id="senha" required/>      
                 
-                <div class="login-buttons">
-                    <button class="login-button" type="submit">Entrar</button>
-                    <a class="login-link" href="/">Voltar</a>
-                    <a class="login-esquecisenha" href="./recuperarsenha">Esqueci minha senha</a>
+                <div class="portal-login-buttons">
+                    <button class="portal-login-button" type="submit">Entrar</button>
+                    <a class="portal-login-link" href="/">Voltar</a>
+                    <a class="portal-login-esquecisenha" href="./recuperarsenha">Esqueci minha senha</a>
                 </div>        
             </div>
         </form> 
