--- a/routes/pages/declaracoes.html
+++ b/routes/pages/declaracoes.html
@@ -47,7 +47,7 @@
                 <h2 class="declaracao-titulo">DECLARAÇÃO ENSINO TÉCNICO</h2>
                 <p class="declaracao-descricao"> Faça o download do modelo e preencha o documento no word, após isso envie para o e-mail. </p>
                 <p class="declaracao-descricao"> E-mail: ceep.jfbarreto@yahoo.com.br</p>
-                <a class="declaracao-button" href="/documents/modelodeclaracaot.docx" download="modelodeclaracaot.docx" target="_blank">Faça download do modelo de declaração</a>
+                <a class="declaracao-button" href="/static/documents/modelodeclaracaotecnico.docx" download="modelodeclaracaot.docx" target="_blank">Faça download do modelo de declaração</a>
             </div>
         
                 <div class="declaracao-chield">
@@ -55,7 +55,7 @@
                 <h2 class="declaracao-titulo">DECLARAÇÃO ENSINO MÉDIO</h2>
                 <p class="declaracao-descricao"> Faça o download do modelo e preencha o documento no word, após isso envie para o e-mail. </p>
                 <p class="declaracao-descricao"> E-mail: ceep.jfbarreto@yahoo.com.br</p> 
-                <a class="declaracao-button" href="/documents/modelodeclaracaot.docx" download="modelodeclaracaot.docx" target="_blank">Faça download do modelo de declaração</a>
+                <a class="declaracao-button" href="/static/documents/modelodeclaracaomedio.docx" download="modelodeclaracaomedio.docx" target="_blank">Faça download do modelo de declaração</a>
             </div>
         </div>
 
