--- a/routes/pages/login.html
+++ b/routes/pages/login.html
@@ -13,19 +13,19 @@
         <form method="POST" action="/login">
             <div class="portal-login-container">
                 <div class="portal-login-logo">
-                    <img class="portal-login-img" src="../img/logoJFB.png" alt="">
+                    <img class="portal-login-img" src="/img/logoJFB.png" alt="Logotipo CEEP">
                     <h1 class="portal-login-title">Login</h1>
                 </div>
 
-                <label class="portal-login-label" for="">Usuário</label>
+                <label class="portal-login-label" for="login">Usuário</label>
                 <input class="portal-input" type="text" name="login" id="login" autocomplete="off" required/> 
-                <label class="portal-login-label" for="">Senha</label>
+                <label class="portal-login-label" for="senha">Senha</label>
                 <input class="portal-input"  type="password" name="senha" id="senha" required/>      
                 
                 <div class="portal-login-buttons">
                     <button class="portal-login-button" type="submit">Entrar</button>
                     <a class="portal-login-link" href="/">Voltar</a>
-                    <a class="portal-login-esquecisenha" href="./recuperarsenha">Esqueci minha senha</a>
+                    <a class="portal-login-esquecisenha" href="/recuperarsenha">Esqueci minha senha</a>
                 </div>        
             </div>
         </form> 
