--- a/routes/pages/recpassword.html
+++ b/routes/pages/recpassword.html
@@ -9,23 +9,23 @@
         <link rel="stylesheet" href="/css/responsive.css">
     </head>
     <body class="body-login">
-        <form method="POST", action="./alterarsenha">
+        <form method="POST" action="/alterarsenha">
             <div class="login-container">
                 <div class="login-logo">
-                    <img class="login-img" src="../img/logoJFB.png" alt="">
+                    <img class="login-img" src="/img/logoJFB.png" alt="Logotipo CEEP">
                     <h1 class="login-title">Recuperar Senha</h1>
                 </div>
                 
-                <label class="login-label" for="">Usuário</label>
+                <label class="login-label" for="login">Usuário</label>
                 <input class="input"  type="text" name="login" id="login" autocomplete="off" required/> 
-                <label class="login-label" for="">Nova Senha</label>
+                <label class="login-label" for="senha">Nova Senha</label>
                 <input class="input" type="password" name="senha" id="senha" required/>
-                <label class="login-label" for="">Confirmação de Nova Senha</label>
+                <label class="login-label" for="confirm">Confirmação de Nova Senha</label>
                 <input class="input" type="password" name="confirm" id="confirm" required/>
                 
                 <div class="login-buttons">
                     <button class="login-button" type="submit">Alterar</button>
-                    <a class="login-link" href="./portaldoaluno">Voltar</a>
+                    <a class="login-link" href="/portaldoaluno">Voltar</a>
                 </div>
             </div>
         </form>
