--- a/routes/pages/home.html
+++ b/routes/pages/home.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/home.css">
         <link rel="stylesheet" href="/css/responsive.css">   
+        <link rel="icon" href="/img/logoJFB.png"> 
     </head>
     <body>
         <header class="header-main">
@@ -59,18 +60,10 @@
         <section class="section-one">  
             <h2 class="section-one-tittle">Destaques</h2>
             <nav class="section-one-container"> 
-                <a href="/ensinomedio">
-                    <div class="section-one-chield">
-                        <img class="section-one-img" src="./img/mochila.png" alt="Ensino Médio">
-                        <h2 >ENSINO MÉDIO</h2>
-                    </div>
-                </a>
-
-
                 <a href="/ensinopro">
                     <div class="section-one-chield">
                         <img class="section-one-img" src="/img/pilha-de-livros.png" alt="Ensino Técnico">
-                        <h2>ENSINO TÉCNICO</h2>
+                        <h2>NOSSOS CURSOS</h2>
                     </div>
                 </a>
 
