--- a/routes/pages/ensinomedio.html
+++ b/routes/pages/ensinomedio.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ensino Médio</title>
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/responsive.css">   
+        <link rel="stylesheet" href="/css/responsive.css"> 
+        <link rel="icon" href="/img/logoJFB.png">   
     </head>
     <body>
         <h1 style="text-align: center;">Nenhum dado cadastrado!</h1>
