--- a/routes/pages/login.html
+++ b/routes/pages/login.html
@@ -7,7 +7,8 @@
     <title>Portal do Aluno</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/portal.css">
-    <link rel="stylesheet" href="/css/responsive.css">   
+    <link rel="stylesheet" href="/css/responsive.css"> 
+    <link rel="icon" href="/img/logoJFB.png">   
 </head>
     <body class="portal-login">
         <form method="POST" action="/login">
