--- a/routes/pages/oficinas.html
+++ b/routes/pages/oficinas.html
@@ -7,10 +7,13 @@
     <title>Oficinas</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
-    
+    <link rel="icon" href="/img/logoJFB.png"> 
 </head>
     <body>
-        <h1 style="text-align: center;">Nenhuma oficina cadastrada!</h1>
-        <script src="/js/script.js"></script>
+        <div class="oficina">
+            <p>Link da Oficina: <a href="https://sites.google.com/view/workshopceep" target="_blank">https://sites.google.com/view/workshopceep</a></p>
+            <a href="/"><button>Voltar ao site</button></a> 
+        </div>
+        <script src="../static/js/script.js"></script>
     </body>
 </html>
