--- a/routes/pages/quemsomos.html
+++ b/routes/pages/quemsomos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/quemsomos.css">
     <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="icon" href="/img/logoJFB.png"> 
 </head>
     <body>
         <header class="header-main">
