--- a/routes/pages/recpassword.html
+++ b/routes/pages/recpassword.html
@@ -5,27 +5,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recuperar Senha</title>
+
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/responsive.css">
+        <link rel="stylesheet" href="/css/portal.css">
+        <link rel="stylesheet" href="/css/responsive.css">   
+        <link rel="icon" href="/img/logoJFB.png"> 
     </head>
-    <body class="body-login">
+    <body class="portal-login">
         <form method="POST" action="/alterarsenha">
-            <div class="login-container">
-                <div class="login-logo">
-                    <img class="login-img" src="/img/logoJFB.png" alt="Logotipo CEEP">
-                    <h1 class="login-title">Recuperar Senha</h1>
+            <div class="portal-login-container">
+                <div class="portal-login-logo">
+                    <img class="portal-login-img" src="/img/logoJFB.png" alt="Logotipo CEEP">
+                    <h1 class="portal-login-title">Recuperar Senha</h1>
                 </div>
                 
-                <label class="login-label" for="login">Usuário</label>
-                <input class="input"  type="text" name="login" id="login" autocomplete="off" required/> 
-                <label class="login-label" for="senha">Nova Senha</label>
-                <input class="input" type="password" name="senha" id="senha" required/>
-                <label class="login-label" for="confirm">Confirmação de Nova Senha</label>
-                <input class="input" type="password" name="confirm" id="confirm" required/>
+                <label class="portal-login-label" for="login">Usuário</label>
+                <input class="portal-input"  type="text" name="login" id="login" autocomplete="off" required/> 
+                <label class="portal-login-label" for="senha">Nova Senha</label>
+                <input class="portal-input" type="password" name="senha" id="senha" required/>
+                <label class="portal-login-label" for="confirm">Confirmação de Nova Senha</label>
+                <input class="portal-input" type="password" name="confirm" id="confirm" required/>
                 
-                <div class="login-buttons">
-                    <button class="login-button" type="submit">Alterar</button>
-                    <a class="login-link" href="/portaldoaluno">Voltar</a>
+                <div class="portal-login-buttons">
+                    <button class="portal-login-button" type="submit">Alterar</button>
+                    <a class="portal-login-link" href="/portaldoaluno">Voltar</a>
                 </div>
             </div>
         </form>
