--- a/routes/pages/ensinopro.html
+++ b/routes/pages/ensinopro.html
@@ -44,65 +44,81 @@
 
         <div class="ensino-container">
             <div class="ensino-chield"> 
+                <img class="ensino-img" src="/img/saude.png" alt="">
                 <h2 class="ensino-titulo">TÉCNICO EM AGENTE COMUNITÁRIO DE SÁUDE</h2>
-                <div>
+            
+                <div class="ensino-block">    
                     <p class="ensino-descricao">Carga horária: 1200h </p>
                     <p class="ensino-descricao">Duração: 24 meses </p>
                     <p class="ensino-descricao">Modalidade:Concomitante/Subsquente </p>
                 </div>
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+
+                <a class="ensino-button" href="/documents/GRADE TACS.pdf" download="gradeacs.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
             <div class="ensino-chield">
+                <img class="ensino-img" src="/img/condominio.png" alt="">
                 <h2 class="ensino-titulo">TÉCNICO EM CONDOMÍNIO</h2> 
-                <div>
+                
+                <div class="ensino-block">
                     <p class="ensino-descricao">Carga horária: 1200h </p>
                     <p class="ensino-descricao">Duração:17 meses </p>
                     <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
                 </div>
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+
+                <a class="ensino-button" href="/documents/GRADE TCON.pdf" download="gradetcon.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
             <div class="ensino-chield"> 
+                <img class="ensino-img" src="/img/hospedagem.png" alt="">
                 <h2 class="ensino-titulo">TÉCNICO EM HOSPEDAGEM</h2>
-                <div>
+
+                <div class="ensino-block">      
                     <p class="ensino-descricao">Carga horária: 1200h </p>
                     <p class="ensino-descricao">Duração:24 meses </p>
                     <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
                 </div>
 
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+                <a class="ensino-button" href="/documents/acsgrade.pdf" download="gradehosp.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
             <div class="ensino-chield"> 
+                <img class="ensino-img" src="/img/internet.png" alt="">
                 <h2 class="ensino-titulo">TÉCNICO EM INFORMÁTICA PARA INTERNET</h2>
-                <div>
+
+                <div class="ensino-block">
                     <p class="ensino-descricao">Carga horária: 800h </p>
                     <p class="ensino-descricao">Duração:17 meses </p>
                     <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
                 </div>
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+
+                <a class="ensino-button" href="/documents/GRADE TII.pdf" download="gradetii.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
             <div class="ensino-chield"> 
+                <img class="ensino-img" src="/img/redes.png" alt="">
                 <h2 class="ensino-titulo">TÉCNICO EM REDES DE COMPUTADORES</h2>
-                <div>
-                    <p class="ensino-descricao">Carga horária: 800h </p>
-                    <p class="ensino-descricao">Duração: 17 meses </p>
-                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
-                </div>
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
-            </div>
-            <br>
-            <div class="ensino-chield"> 
-                <h2 class="ensino-titulo">TÉCNICO EM RESTAURANTE E BAR</h2>
-                <div>
+
+                <div class="ensino-block">
                     <p class="ensino-descricao">Carga horária: 800h </p>
                     <p class="ensino-descricao">Duração: 17 meses </p>
                     <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>
                 </div>
 
-                <a class="ensino-button" href="/documents/acsgrade.pdf" download="acsgrade.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+                <a class="ensino-button" href="/documents/GRADE TRC.pdf" download="gradetrc.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
+            </div>
+            <br>
+            <div class="ensino-chield"> 
+                <img class="ensino-img" src="img/restaurantes.png" alt="">
+                <h2 class="ensino-titulo">TÉCNICO EM RESTAURANTE E BAR</h2>
+
+                <div class="ensino-block">
+                    <p class="ensino-descricao">Carga horária: 800h </p>
+                    <p class="ensino-descricao">Duração: 17 meses </p>
+                    <p class="ensino-descricao">Modalilade:Concomitante/Subsquente </p>        
+                </div>
+
+                <a class="ensino-button" href="/documents/GRADE TREB.pdf" download="gradetreb.pdf" target="_blank">Faça aqui o Download da matriz curricular</a>
             </div>
             <br>
         </div>
